k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: micro
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8000
