k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: micro
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 80

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80

          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
